--- a/RRU_train_test.ipynb
+++ b/RRU_train_test.ipynb
@@ -907,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('style')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -921,12 +921,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f3763e5db0803e2e7bba60dcf2d22c1663bc8f01153e6521382ad70e4ba55214"
+    "hash": "146a80bd17f83b9cc8bcadcf5051d100a677290f0b2094e7bb0530444956a25f"
    }
   }
  },
